testdata/baselines/reference/compiler/errorInUnnamedClassExpression.errors.txt
errorInUnnamedClassExpression(4,11): error TS1005: ',' expected.
errorInUnnamedClassExpression(4,11): error TS1003: Identifier expected.
errorInUnnamedClassExpression(4,17): error TS1005: ',' expected.
errorInUnnamedClassExpression(4,17): error TS1003: Identifier expected.
errorInUnnamedClassExpression(5,5): error TS1005: ',' expected.
errorInUnnamedClassExpression(5,16): error TS1005: ',' expected.
errorInUnnamedClassExpression(5,16): error TS1005: ';' expected.
errorInUnnamedClassExpression(5,16): error TS1128: Declaration or statement expected.
errorInUnnamedClassExpression(5,17): error TS1003: Identifier expected.
errorInUnnamedClassExpression(5,19): error TS1005: ';' expected.
errorInUnnamedClassExpression(8,5): error TS1128: Declaration or statement expected.
errorInUnnamedClassExpression(9,1): error TS1128: Declaration or statement expected.

==== errorInUnnamedClassExpression (12 errors) ====
    
    // https://github.com/microsoft/TypeScript/issues/62920
    
    let Foo = class {
              ~~~~~
!!! error TS1005: ',' expected.
              ~~~~~
!!! error TS1003: Identifier expected.
                    ~
!!! error TS1005: ',' expected.
                    ~
!!! error TS1003: Identifier expected.
        constructor() {
        ~~~~~~~~~~~
!!! error TS1005: ',' expected.
                   ~
!!! error TS1005: ',' expected.
                   ~
!!! error TS1005: ';' expected.
                   ~
!!! error TS1128: Declaration or statement expected.
                    ~
!!! error TS1003: Identifier expected.
                      ~
!!! error TS1005: ';' expected.
            this.bar++;
        }
        abstract bar;
        ~~~~~~~~
!!! error TS1128: Declaration or statement expected.
    };
    ~
!!! error TS1128: Declaration or statement expected.
    
